# hacfreiburg-2017-talk

./: presentation.html  presentation.org
benchmarks/: Main.hs  benchmarks.cabal
