name:                benchmarks
version:             0.1.0.0
homepage:            https://github.com/mboes/benchmarks#readme
license:             BSD3
license-file:        LICENSE
author:              Mathieu Boespflug
maintainer:          m@tweag.io
copyright:           (c) 2017 Mathieu Boespflug
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

benchmark benchmarks
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends: base >= 4, criterion, unix, deepseq
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/mboes/benchmarks
